--- a/student.ipynb
+++ b/student.ipynb
@@ -20,7 +20,10 @@
    "source": [
     "# Overview\n",
     "<div style=\"text-align:justify;\">\n",
+    "<img src=\"Images/scorese.jpeg\">\n",
     "\n",
+    "“Movies touch our hearts and awaken our vision, and change the way we see things. They take us to other places, they open doors and minds. Movies are the memories of our life time, we need to keep them alive.”\n",
+    "― Martin Scorsese\n",
     "\n",
     "This project is an exploratory data analysis on film data obtained from various sources to hel our company as they venture into the film making industry. The task is to provide insights from the analysis to help the company make decisions on the kind of films to make to maximize profit and audience engagement.\n",
     "\n",
